# logging

./: CMakeLists.txt
base/: logger.hpp
console/: CMakeLists.txt  console_logger.hpp  external_console.cpp
console/include/logging/: console.h
event/: CMakeLists.txt  event_logger.hpp
event/include/logging/: event.h
file/: CMakeLists.txt  file_logger.hpp
file/include/logging/: file.h
include/logging/: base  console  event  file  logger
logger/: CMakeLists.txt
